--- a/index.html
+++ b/index.html
@@ -4,24 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
-    
-   
-
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-material-ui@4/material-ui.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
-
-    <script defer src="main.js"></script>
-    <link rel="stylesheet" href="styles.css">
-
 </head>
 <body>
-    <input  id="myPikachu" value="Pikachu" type="submit">
-    <input  id="myPikachu" value="Charizar" type="submit"> 
-    <input  id="myPikachu" value="Ditto" type="submit"> 
-    <input  id="myPikachu" value="mewtwo" type="submit">
-    <input  id="myPikachu" value="mewtwo" type="submit">
-    <input  id="myPikachu" value="mewtwo" type="submit">
-    <input  id="myPikachu" value="mewtwo" type="submit">
-    <input  id="myPikachu" value="mewtwo" type="submit"> 
+    <div class="video-container">
+        <video autoplay muted loop>
+          <source src="pokedexX.mp4" type="video/mp4">
+        </video>
+      </div>
+    <div class="pokedex-container">
+        <img class="titulo-poke"src="titulo.png">
+       
+    <div class="pokemon-container">
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Pikachu" data-pokemon="pikachu" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Charizard" data-pokemon="charizard" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Ditto" data-pokemon="ditto" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Mewtwo" data-pokemon="mewtwo" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Bulbasaur" data-pokemon="bulbasaur" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Ivysaur" data-pokemon="ivysaur" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Venusaur" data-pokemon="venusaur" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Charmeleon" data-pokemon="charmeleon" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Charmander" data-pokemon="charmander" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Squirtle" data-pokemon="squirtle" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Wartortle" data-pokemon="wartortle" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Blastoise" data-pokemon="blastoise" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Caterpie" data-pokemon="caterpie" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Metapod" data-pokemon="metapod" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Butterfree" data-pokemon="butterfree" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Weedle" data-pokemon="weedle" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Kakuna" data-pokemon="kakuna" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Beedrill" data-pokemon="beedrill" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Pidgey" data-pokemon="pidgey" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Pidgeotto" data-pokemon="pidgeotto" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Pidgeot" data-pokemon="pidgeot" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Rattata" data-pokemon="rattata" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Raticate" data-pokemon="raticate" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Spearow" data-pokemon="spearow" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Fearow" data-pokemon="fearow" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Ekans" data-pokemon="ekans" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Arbok" data-pokemon="arbok" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Raichu" data-pokemon="raichu" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Sandshrew" data-pokemon="sandshrew" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Sandslash" data-pokemon="sandslash" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Nidoran" data-pokemon="nidoran" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Nidorina" data-pokemon="nidorina" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Nidoqueen" data-pokemon="nidoqueen" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Nidoran" data-pokemon="nidoran" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Nidorino" data-pokemon="nidorino" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Nidoking" data-pokemon="nidoking" type="button">
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    <script defer src="main.js"></script>
 </body>
 </html>
