feat: ✨ Introduccion de nuevos botones de pokemones al codigo

--- a/index.html
+++ b/index.html
@@ -125,6 +125,213 @@
         <div class="pokemon">
             <input class="pokemon-btn" value="Nidoking" data-pokemon="nidoking" type="button">
         </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Clefairy" data-pokemon="clefairy" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Clefairy" data-pokemon="clefairy" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Clefable" data-pokemon="clefable" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Vulpix" data-pokemon="vulpix" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Ninetales" data-pokemon="Ninetales" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Jigglypuff" data-pokemon="jigglypuff" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Wigglytuff" data-pokemon="wigglytuff" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Zubat" data-pokemon="zubat" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Golbat" data-pokemon="golbat" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Gloom" data-pokemon="gloom" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Vileplume" data-pokemon="vileplume" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Paras" data-pokemon="paras" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Parasect" data-pokemon="parasect" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Venonat" data-pokemon="venonat" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Venomoth" data-pokemon="venomoth" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Diglett" data-pokemon="diglett" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Dugtrio" data-pokemon="dugtrio" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Meowth" data-pokemon="meowth" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Persian" data-pokemon="persian" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Psyduck" data-pokemon="psyduck" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Golduck" data-pokemon="golduck" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Mankey" data-pokemon="mankey" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Primeape" data-pokemon="primeape" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Growlithe" data-pokemon="growlithe" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Arcanine" data-pokemon="arcanine" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Poliwag" data-pokemon="poliwag" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Poliwhirl" data-pokemon="poliwhirl" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Poliwrath" data-pokemon="poliwrath" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Abra" data-pokemon="abra" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Kadabra" data-pokemon="kadabra" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Alakazam" data-pokemon="alakazam" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Machop" data-pokemon="machop" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Machoke" data-pokemon="machoke" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Machamp" data-pokemon="machamp" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Bellsprout" data-pokemon="bellsprout" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Weepinbell" data-pokemon="weepinbell" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Victreebel" data-pokemon="victreebel" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Tentacool" data-pokemon="tentacool" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Tentacruel" data-pokemon="tentacruel" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Geodude" data-pokemon="geodude" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Graveler" data-pokemon="graveler" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Golem" data-pokemon="golem" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Ponyta" data-pokemon="ponyta" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Rapidash" data-pokemon="rapidash" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Slowpoke" data-pokemon="slowpoke" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Slowbro" data-pokemon="slowbro" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Magnemite" data-pokemon="magnemite" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Magneton" data-pokemon="magneton" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Farfetch'd" data-pokemon="farfetch'd" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Doduo" data-pokemon="doduo" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Dodrio" data-pokemon="dodrio" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Seel" data-pokemon="seel" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Dewgong" data-pokemon="dewgong" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Grimer" data-pokemon="grimer" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Muk" data-pokemon="muk" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Shellder" data-pokemon="shellder" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Cloyster" data-pokemon="cloyster" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Gastly" data-pokemon="gastly" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Gengar" data-pokemon="gengar" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Onix" data-pokemon="onix" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Voltorb" data-pokemon="voltorb" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Gastly" data-pokemon="gastly" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Hitmonlee" data-pokemon="hitmonlee" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Magikarp" data-pokemon="magikarp" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Gyarados" data-pokemon="gyarados" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Vaporeon" data-pokemon="vaporeon" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Eevee" data-pokemon="eevee" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Dragonite" data-pokemon="dragonite" type="button">
+        </div>
+        <div class="pokemon">
+            <input class="pokemon-btn" value="Mew" data-pokemon="mew" type="button">
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
     <script defer src="main.js"></script>
