--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <div class="pokedex-container">
         <img class="titulo-poke" src="titulo.png">
     </div>
+    <label for="show-pokemon-count">Selecciona la cantidad de Pokémon a mostrar:</label>
+    <input type="number" id="show-pokemon-count" value="10" min="1" max="1000">
+    
     <div class="pokemon-container" id="pokemon-container">
     </div>
-    
+   
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
     <script defer src="main.js"></script>
 </body>
