feat: ♻️ Mejoramiento de HTML para funcionamiento de JS

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <div class="pokedex-container">
         <img class="titulo-poke" src="titulo.png">
     </div>
-    <label for="show-pokemon-count">Selecciona la cantidad de Pokémon a mostrar:</label>
-    <input type="number" id="show-pokemon-count" value="10" min="1" max="1000">
-    
+    <div class="buscadorPokemon">
+        <label for="show-pokemon-count">Selecciona la cantidad de Pokémon a mostrar:</label>
+        <input type="number" id="pokemon-count-input" value="10" min="1" max="1000">
+    </div>
     <div class="pokemon-container" id="pokemon-container">
     </div>
    
